<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.08"
	    android:gravity="center"
	    android:orientation="vertical" >
        	    <Button
	        android:id="@+id/btnConfigMain"
	        android:layout_width="128dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btnConfigurar" />

    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.08"
	    android:gravity="center"
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/btnLoginMain"
	        android:layout_width="128dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btnLogin" />

    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.08"
	    android:gravity="center"
	    android:orientation="vertical" >
	    
	    <Button
                android:id="@+id/btnScanMain"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/btnScan" />

    </LinearLayout>   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>